------------------------------------------------------
Version 1.8.9 - 1.3.0
------------------------------------------------------
Additions (in relation to 1.7.10 - 1.2.15)
- None

Changes (in relation to 1.7.10 - 1.2.15)
- None

Bug Fixes (in relation to 1.7.10 - 1.2.15)
- None