@@ -1,10 +1,0 @@
-package main.ironbackpacks.integration.deprecated;
-
-import net.minecraft.entity.player.EntityPlayer;
-
-public class OpenBlocksNoSupport { //TODO: can probably remove this
-
-    public boolean isGliding(EntityPlayer player){
-        return false;
-    }
-}
