@@ -1,11 +1,11 @@
 package main.ironbackpacks.proxies;
 
 import main.ironbackpacks.ModInformation;
+import main.ironbackpacks.client.KeyHandler;
 import main.ironbackpacks.client.renderer.RenderBackpack;
 import main.ironbackpacks.entity.EntityBackpack;
 import main.ironbackpacks.events.IronBackpacksClientEventHandler;
 import main.ironbackpacks.handlers.ConfigAdaptor;
-import main.ironbackpacks.handlers.KeybindingHandler;
 import main.ironbackpacks.items.ItemRegistry;
 import main.ironbackpacks.util.IronBackpacksConstants;
 import net.minecraft.client.Minecraft;
@@ -18,8 +18,6 @@ import net.minecraftforge.fml.common.FMLCommonHandler;
  */
 public class ClientProxy extends CommonProxy {
 
-    public static KeybindingHandler keybindingHandler;
-
     public EntityPlayer getClientPlayer(){
         return Minecraft.getMinecraft().thePlayer;
     }
@@ -27,10 +25,16 @@ public class ClientProxy extends CommonProxy {
     public void preInit(){
         initKeybindings();
         initItemRenderers();
+        initEntityRenderers(); //for 1.9
+        initClientEventHandler();
+    }
+
+    private void initEntityRenderers(){
+//        RenderingRegistry.registerEntityRenderingHandler(EntityBackpack.class, //some IRenderFactory) //deprecated past 1.8
     }
 
     public void init(){
-        RenderingRegistry.registerEntityRenderingHandler(EntityBackpack.class, new RenderBackpack(Minecraft.getMinecraft().getRenderManager())); //TODO: rendering model
+        RenderingRegistry.registerEntityRenderingHandler(EntityBackpack.class, new RenderBackpack(Minecraft.getMinecraft().getRenderManager()));
     }
 
     public String getModVersion(){
@@ -41,13 +45,16 @@ public class ClientProxy extends CommonProxy {
         return ConfigAdaptor.getLatestFilenameFromCurse(IronBackpacksConstants.Miscellaneous.URL_UPDATED_VERSION);
     }
 
-    public void initKeybindings() {
-        keybindingHandler = new KeybindingHandler();
-        keybindingHandler.init();
+    private void initKeybindings() {
+//        keyHandler = new KeyHandler();
+        KeyHandler.init();
+    }
+
+    private void initClientEventHandler(){
         FMLCommonHandler.instance().bus().register(new IronBackpacksClientEventHandler());
     }
 
-    public void initItemRenderers(){
+    private void initItemRenderers(){
         ItemRegistry.registerItemRenders();
     }
 
